# regista

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md  quickstart.md  reference.md
docs/concepts/: context.md  environment.md  evals.md  instructions.md  loop.md  policy.md  primitives.md  providers.md  replay.md  skills.md  streaming.md  subagents.md  tools.md  trace.md
examples/: 01_hello_agent.py  02_environment_and_policy.py  03_streaming.py  04_real_provider.py  05_replay.py  06_mcp.py  07_evals.py  08_subagents.py
src/regista/: __init__.py  _ids.py  _version.py  agent.py  errors.py  evals.py  instructions.py  loop.py  pricing.py  replay.py  session.py  skills.py  streaming.py  types.py
src/regista/context/: __init__.py
src/regista/environment/: __init__.py  base.py  container.py  local.py
src/regista/policy/: __init__.py  permissions.py  presets.py
src/regista/providers/: __init__.py  anthropic.py  base.py  fake.py  openai_compat.py  replay.py
src/regista/tools/: __init__.py  builtin.py  mcp.py  registry.py  schema.py
src/regista/trace/: __init__.py  events.py  otel.py  reader.py  writer.py
tests/: mcp_echo_server.py  test_agent.py  test_builtin_tools.py  test_container_environment.py  test_context.py  test_environment.py  test_evals.py  test_live_smoke.py  test_mcp.py  test_otel.py  test_package.py  test_policy.py  test_pricing.py  test_provider_anthropic.py  test_provider_openai_compat.py  test_providers_base.py  test_real_trace.py  test_replay.py  test_resume.py  test_skills.py  test_streaming.py  test_subagents.py  test_tools.py  test_trace.py  test_types.py
tests/fixtures/: openai_add.jsonl
