[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regista-harness"
version = "0.2.0"
description = "Observability-first agent harness: every session is a structured, deterministically replayable trace."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Mohak Wagh", email = "mohak.wagh@gmail.com" }]
requires-python = ">=3.10"
keywords = ["agents", "llm", "harness", "observability", "tracing", "replay", "anthropic", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "anthropic>=0.40",
]

[project.optional-dependencies]
otel = ["opentelemetry-api>=1.25", "opentelemetry-sdk>=1.25"]
mcp = ["mcp>=1.2"]

# The distribution is regista-harness but the import package is regista, so
# hatchling can't infer the wheel contents from the project name.
[tool.hatch.build.targets.wheel]
packages = ["src/regista"]

[project.urls]
Homepage = "https://github.com/mohakwagh/regista"
Documentation = "https://mohakwagh.github.io/regista"
Repository = "https://github.com/mohakwagh/regista"
Changelog = "https://github.com/mohakwagh/regista/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "opentelemetry-sdk>=1.25",
    "mcp>=1.2",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "TCH", # type-checking imports
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["SIM117"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.mypy]
strict = true
files = ["src"]
python_version = "3.10"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
filterwarnings = ["error"]

[tool.coverage.run]
source = ["regista"]
branch = true

[tool.coverage.report]
fail_under = 90
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]
